--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.parents:hover {
+  background-color: #fae6d5;
+  color: blue;
+  transition-delay: 50ms;
+}
+.parents:hover .child {
+  color: black;
+}
